--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 * {
   margin: 0px;
   padding: 0px;
+  font-family: "Inter", sans-serif;
 }
 
 body {
+  width: 100%;
+  height: 100%;
   background-color: #201F1F;
   color: #D9D9D9;
 }
